src/chrome/komodo/skin/plat/gnome/bindings/scrolltabs.css
/* Copyright (c) 2000-2006 ActiveState Software Inc.
   See the file LICENSE.txt for licensing information. */

@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");

tabbox[type="draggable"]
{
  -moz-binding: url('chrome://komodo/content/bindings/scrolltabs.xml#tabbox-draggable');
}

tabs[type="scrollable"]
{
  -moz-binding: url('chrome://komodo/content/bindings/scrolltabs.xml#tabs-scrollable');
}

tab[type="file-tab"]
{
  -moz-binding: url('chrome://komodo/content/bindings/scrolltabs.xml#file-status-tab');
}

.tabs-select-button {
  list-style-image: url("chrome://komodo/skin/images/tab_select.png");
}
.sidebar-buttons .tabs-select-button {
  list-style-image: url("chrome://komodo/skin/images/select_sidebar_gnome.png");
}
.tabs-select-button  > .toolbarbutton-menu-dropmarker {
  display: none;
}
.tabs-select-button  > .toolbarbutton-text {
  display: none;
}
.tabs-select-button > .toolbarbutton-icon {
   margin: 0px;
}

.tabs-closebutton,
.tab-close-button[selected="true"] {
  list-style-image: url("moz-icon://stock/gtk-close?size=menu");
  -moz-appearance: none;
  border: none !important;
  background: inherit;
  cursor: default;
  /*
    Remove the top and bottom padding, otherwise the tabs look fat (too tall).
    Provide more space to the left of the button, otherwise the X button is
    too jammed against the tab text.
  */
  padding: 0 0 0 6px;
}

.tabs-closebutton:hover,
.tab-close-button[selected="true"]:hover {
  list-style-image: url("moz-icon://stock/gtk-close?size=menu");
}

.tabs-closebutton:hover:active,
.tab-close-button[selected="true"]:hover:active {
  list-style-image: url("moz-icon://stock/gtk-close?size=menu");
}

.scroll-arrow-right-icon
{
  list-style-image : url("chrome://komodo/skin/images/scrollArrowRight.png");
}

.scroll-arrow-right-icon:hover
{
  list-style-image : url("chrome://komodo/skin/images/scrollArrowRight_hover.png");
}

.scroll-arrow-right-icon[disabled="true"],
.scroll-arrow-right-icon[disabled="true"]:hover,
.scroll-arrow-right-icon[disabled="true"]:hover:active
{
  list-style-image : url("chrome://komodo/skin/images/scrollArrowRight_disable.png");
}

.scroll-arrow-left-icon
{
  list-style-image : url("chrome://komodo/skin/images/scrollArrowLeft.png");
}

.scroll-arrow-left-icon:hover
{
  list-style-image : url("chrome://komodo/skin/images/scrollArrowLeft_hover.png");
}

.scroll-arrow-left-icon[disabled="true"],
.scroll-arrow-left-icon[disabled="true"]:hover,
.scroll-arrow-left-icon[disabled="true"]:hover:active
{
  list-style-image : url("chrome://komodo/skin/images/scrollArrowLeft_disable.png");
}

.scroll-x-icon
{
  list-style-image : url("chrome://komodo/skin/images/small-x.png");
}

.scroll-x-icon:hover
{
  list-style-image : url("chrome://komodo/skin/images/small-x_hover.png");
}

.scroll-x-icon[disabled="true"],
.scroll-x-icon[disabled="true"]:hover,
.scroll-x-icon[disabled="true"]:hover:active
{
  list-style-image : url("chrome://komodo/skin/images/small-x_disable.png");
}


.scroll-minimize-left-icon {
  list-style-image : url("chrome://komodo/skin/images/minimize_left.gif");
}

.scroll-minimize-left-icon:hover {
  list-style-image : url("chrome://komodo/skin/images/minimize_left_hover.gif");
}

.scroll-minimize-left-icon[disabled="true"],
.scroll-minimize-left-icon[disabled="true"]:hover,
.scroll-minimize-left-icon[disabled="true"]:hover:active {
  list-style-image : url("chrome://komodo/skin/images/minimize_left_disable.gif");
}


.scroll-minimize-right-icon {
  list-style-image : url("chrome://komodo/skin/images/minimize_right.png");
}

.scroll-minimize-right-icon:hover {
  list-style-image : url("chrome://komodo/skin/images/minimize_right_hover.png");
}

.scroll-minimize-right-icon[disabled="true"],
.scroll-minimize-right-icon[disabled="true"]:hover,
.scroll-minimize-right-icon[disabled="true"]:hover:active {
  list-style-image : url("chrome://komodo/skin/images/minimize_right_disable.png");
}


.scroll-minimize-down-icon {
  list-style-image : url("chrome://komodo/skin/images/minimize_down.gif");
}

.scroll-minimize-down-icon:hover {
  list-style-image : url("chrome://komodo/skin/images/minimize_down_hover.gif");
}

.scroll-minimize-down-icon[disabled="true"],
.scroll-minimize-down-icon[disabled="true"]:hover,
.scroll-minimize-down-icon[disabled="true"]:hover:active {
  list-style-image : url("chrome://komodo/skin/images/minimize_down_disable.gif");
}

.tab-icon {
    padding: 0px;
    margin: 0px;
    margin-right: 1px;
}

tabs.xxx-small > tab {
    font-size : xx-small;
}

tabs.small > tab {
    font-size: 85%;
}

tab {
  border: none !important;
  padding-top: 0px;
  padding-bottom: 0px;
  margin-top: 3px;
  margin-bottom: 1px;
}

tab[selected="true"] {
  padding-top: 1px;
  margin-top: 1px;
  margin-bottom: 0px;
}

tab.tabs-bottom {
  margin: 0px;
}

/* Menuitem for the selected tab in the tabs-droplist. */
tabs menuitem.selected {
  font-weight: bold;
}

